--- a/html/3_css_basics_properties/sample/styles/principal.css
+++ b/html/3_css_basics_properties/sample/styles/principal.css
@@ -9,6 +9,16 @@ body{
 	height:100%;
 }
 
+ul, li, p{
+	margin:0;
+	padding:0;
+}
+
+a{
+	color:inherit;
+	text-decoration:inherit;
+}
+
 .page{
 	width:1000px;
 	height:1480px;
@@ -17,6 +27,7 @@ body{
 	left:0;
 	right:0;
 	margin:60px auto 60px;
+	box-shadow: 0px 0px 20px #000;
 }
 
 .header{
@@ -25,6 +36,33 @@ body{
 	width:100%;
 	height:360px;
 }
-img{
-	background:rgba(255,0,0,.5);
+
+img#logo{
+	margin-top: 43px;
+	margin-left: 60px;
+	float:left;
 }
+
+#menu{
+	float:left;
+	margin-top:260px;
+	margin-left:76px;
+}
+
+#menu li{
+	float:left;
+	display:block;
+	background:#777;
+	margin-right:10px;
+	font-family:Georgia, "Times New Roman", Times, serif;
+	font-size:18px;
+	letter-spacing: 0.08em;
+	color:#fff;
+	line-height:35px;
+	padding:5px 8px 0 8px;
+}
+
+li#menu1{background-color:#088420;}
+li#menu2{background-color:#4397ab;}
+li#menu3{background-color:#ce5409;}
+li#menu4{background-color:#e09896;}
